# raylibgol

./: .clang-format  .gitignore  CMakeLists.txt  README.md  meson.build
include/: game.h  meson.build  rules.h  utils.h
src/: game.cpp  main.cpp  meson.build  rules.cpp  utils.cpp
test/: meson.build  rules_test.cpp  utils_test.cpp
tests/: test_example.cpp  test_main.cpp
